# ragrarian

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh
Dockerfiles/: Dockerfile  docker-compose.yml
Rag_app/: main.py
Rag_app/api/: endpoints.py
Rag_app/config/: config.py
Rag_app/core/: model.py  utils.py
Rag_app/frontend/: streamlit.py
Rag_app/model/: rag_model.py
data/: file  file.pkl
